--- a/angular.json
+++ b/angular.json
@@ -18,12 +18,7 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+            "assets": [ "src/assets", "src/favicon.ico" ],
             "styles": [
               "src/styles.css"
             ]
